java/java.hints/test/unit/data/goldenfiles/org/netbeans/modules/java/hints/errors/ErrorHintsTest/testMakeClassAbstract2.pass
package org.netbeans.test.java.hints;

abstract class MakeClassAbstract2 {
    
    public MakeClassAbstract2() {
    }
    
    public abstract void test();
    
}
